# nomad-parser-magres

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: actions.yml  mkdocs-deploy.yml
src/nomad_parser_magres/: parser.py
src/nomad_parser_magres/parsers/: __init__.py  parser.py  workflow.py
src/nomad_parser_magres/parsers/utils/: utils.py
src/nomad_parser_magres/schema_packages/: __init__.py  package.py  schema.py
src/nomad_parser_magres/utils/: utils.py
tests/: test_parser.py
tests/data/: castep_cutoff_ev_scientific.magres  castep_cutoff_hartree_decimal.magres  ethanol_nmr.magres  no_unit_cutoff.magres  no_unit_cutoff_scientific.magres  qe_cutoff_ry_scientific.magres  silicon.magres
